feat: 자동차 이름 입력값 검증 로직 추가
- 자동차 이름의 앞 뒤에 공백이 오는 케이스를 검증합니다.
- 입력값이 비어있는지 검증합니다.
- 자동차 이름이 5글자를 초과하는지 검증합니다.